--- a/semrate/templates/base.html
+++ b/semrate/templates/base.html
@@ -51,10 +51,20 @@ $(init);
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
 <script type="text/javascript" src="http://freebaselibs.com/static/suggest/1.3/suggest.min.js"></script>
 <script type="text/javascript">
+
+function fooz(e) {
+  alert(e.id);
+}
+
 $(function() {
-  $("#id_name").suggest(); //{type:'/business/consumer_product'}
+  x = $("#category_name_input").suggest({ type:'type'});
+  x.bind('fb-select', function(e, data) { console.log('suggest: ', data.id); });
 });
+
+
 </script>
+
+
 
 
 </head>
