--- a/trunk/semrate/templates/viewproduct.html
+++ b/trunk/semrate/templates/viewproduct.html
@@ -62,6 +62,7 @@ function toggleAddParameter() {
 $(localinit);
 </script>
 <h2>{{ product.name }}</h2>
+<tiny><a href="/rdf/{{product.suburi}}">RDF</a></tiny>
 <p><tiny>{% if overall_score %}Overall Score: {{ overall_score }}{% else %}Not rated yet.{% endif %}</tiny></p>
 
 <p>
