renamed all to slug

--- a/semrate/templates/products_of_category.html
+++ b/semrate/templates/products_of_category.html
@@ -6,7 +6,7 @@
     <h2>Products in Category {{category}}</h2>
       <ul>
       {% for product in products %}
-        <li><a href="/products/{{product.suburi}}">{{ product|escape }}</a></l1>
+        <li><a href="/products/{{product.slug}}">{{ product|escape }}</a></l1>
       {% endfor %}
       </ul>
   {% else %}
