--- a/semrate/templates/categories.html
+++ b/semrate/templates/categories.html
@@ -6,7 +6,7 @@
 	
 		<ul>
 		{% for category in categories %}
-			<li><a href="/category/{{category.slug}}">{{category.name}}</a></li>
+			<li><a href="/category{{category.slug}}">{{category.name}}</a></li>
 		{% endfor%}
 		</ul>
 	{% else %}
