--- a/trunk/semrate/templates/base.html
+++ b/trunk/semrate/templates/base.html
@@ -91,7 +91,7 @@ $(function() {
 	  {% if facebook_id %}
 		<img src="https://graph.facebook.com/{{facebook_id}}/picture"/>
 	  {% endif %}
-			<a style='display: block; color: #6cf; font-size:8pt; margin-left: 20px; margin-top: 5px;' href="/accounts/logout" class='discrete_link'>[logout]</a>
+			<a style='display: block; color: #6cf; font-size:8pt; margin-left: 20px; margin-top: 5px;' href="/accounts/logout/" class='discrete_link'>[logout]</a>
 		{% else %}
 	  
 	  <span style=' margin-left: 20px;'> Not logged in. </span><br/>
