--- a/trunk/semrate/templates/viewproduct.html
+++ b/trunk/semrate/templates/viewproduct.html
@@ -197,7 +197,7 @@ Rating is done on a 0 to 5 scale, with 5 being best.
 </tr>
 <tr>
 <td> {{product.creator}} </td>
-<td> {{product.activity}} </td>
+<td> {{product.last_activity}} </td>
 </tr>
 </table>
 
