--- a/semrate/templates/newproduct.html
+++ b/semrate/templates/newproduct.html
@@ -47,13 +47,13 @@ function get_params() {
 }
 </script>
 
-<h2> New product </h2>
+<h2> New Thinh </h2>
 
 <div style='text-align: center;'>
   <p style='text-align: center;'>
   Search and select:<br/>
   <input id='fb_product_autosuggest_input' type='input'> <br/>
-  <a style='font-size: 9pt;' class='discrete_link' href='javascript:toggle_create_mod()'>[Add product not in the list]</a>
+  <a style='font-size: 9pt;' class='discrete_link' href='javascript:toggle_create_mod()'>[Add a Thing not in the list]</a>
   </p>
   <p>
   <span style='font-size: 14pt;' id='product_name'> &nbsp;</span> <span style='font-size: 14pt; ' id='product_type'></span>
@@ -63,7 +63,7 @@ function get_params() {
   </div>
   <p>
   <form action='/add_product_fb' method='post'>
-  <input type='submit' value='Add product'/>
+  <input type='submit' value='Add it!'/>
   <input type='hidden' id='fbid' name='fbid'/><br/>
   <input type='hidden' id='fbname' name='fbname'/><br/>
   <input type='hidden' id='fbtype_id' name='fbtype_id'/><br/>
