--- a/trunk/semrate/templates/index.html
+++ b/trunk/semrate/templates/index.html
@@ -2,9 +2,9 @@
 
 {% block content %}
 <div id='searchdiv'>
-	<h3> Search for a product: </h3>
+	<h3> Search for Things: </h3>
 	<form action="/search">
-<!-- 			<label>Search for a product:</label><br/> -->
+<!-- 			<label>Search for Things:</label><br/> -->
 		<table id='searchformtable'>
 		  <tr>
 			<td><input type="text" name="q" id='q'/></td><td><input id='searchinput' type="submit" value="Search"/></td></tr>
@@ -15,7 +15,7 @@
 </div>
 <div style="width:100%">
 	<div>
-		<h3>Recent Products/Services</h3>
+		<h3>Recently added</h3>
 		<ul>
 		{% for product in products %}
 		<li><a href='products{{ product.slug }}'> {{ product.name }} </a></li>
@@ -48,7 +48,7 @@
 <div style="width:100%">
 	<center>
 
-	<div style="width:300px; background-color: white; border: solid blue; ">
+	<div style="width:300px; background-color: #6cf; border: #6cf; ">
 	<form action="{% url facebook_connect %}?facebook_login=1" method="post">
 		<input type="hidden" value="{{ request.path }}" name="next" />
 
