--- a/semrate/templates/newproduct.html
+++ b/semrate/templates/newproduct.html
@@ -47,7 +47,7 @@ function get_params() {
 }
 </script>
 
-<h2> New Thinh </h2>
+<h2> New Thing </h2>
 
 <div style='text-align: center;'>
   <p style='text-align: center;'>
