--- a/semrate/templates/base.html
+++ b/semrate/templates/base.html
@@ -91,7 +91,8 @@ $(function() {
 	  {% if facebook_id %}
 		<img src="https://graph.facebook.com/{{facebook_id}}/picture"/>
 	  {% endif %}<br/>
-			<a style='color: #6cf; font-size:8pt; margin-left: 20px; margin-top: 5px;' href="/accounts/logout/" class='discrete_link'>[logout]</a>
+			<a style='color: #6cf; font-size:8pt; margin-left: 20px; margin-top: 5px;' href="/accounts/logout/" class='discrete_link'>[Logout]</a>
+<a style='color: #6cf; font-size:8pt; margin-left: 20px; margin-top: 5px;' href="/accounts/inbox/" class='discrete_link'>[Inbox]{% if messages_inbox_count %}{{ messages_inbox_count }} {% endif %}</a>
 	  <a class='discrete_link' style='color: #6cf; font-size:8pt; margin-left: 20px; margin-top: 5px;' href="/user/{{request.user}}">[Profile]</a> <br/>
 		{% else %}
 	  
@@ -103,7 +104,6 @@ $(function() {
 </table>
 <a class='menuitem' href='/'>Home</a>
 <a class='menuitem' href='/newproduct'>Create Product</a>
-#<a class='menuitem' href='/newcategory'>Create Category</a>
 <a class='menuitem' href='/categories'>List Categories</a>
 
 {% if user.is_authenticated %}
