--- a/semrate/templates/categories.html
+++ b/semrate/templates/categories.html
@@ -10,7 +10,7 @@
 		{% endfor%}
 		</ul>
 	{% else %}
-		No categories found yet. Why not <a href="/newcategory">create</a> one? 
+		<h2>Currently there are no categories. \n Why don't you <a href="/newproduct">create</a> a product to fill this void?</h2>
 	{% endif %}
 
 
