--- a/semrate/templates/newproduct.html
+++ b/semrate/templates/newproduct.html
@@ -53,7 +53,7 @@ function get_params() {
   <p style='text-align: center;'>
   Search and select:<br/>
   <input id='fb_product_autosuggest_input' type='input'> <br/>
-  <a style='font-size: 9pt;' class='discrete_link' href='javascript:toggle_create_mod()'>[Add a Thing not in the list]</a>
+  <!-- <a style='font-size: 9pt;' class='discrete_link' href='javascript:toggle_create_mod()'>[Add a Thing not in the list]</a> -->
   </p>
   <p>
   <span style='font-size: 14pt;' id='product_name'> &nbsp;</span> <span style='font-size: 14pt; ' id='product_type'></span>
