--- a/semrate/templates/viewproduct.html
+++ b/semrate/templates/viewproduct.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load humanize %}
 {% block title%} SemRate - {{product.name}} {% endblock %}
 
 {% block content %}
@@ -40,6 +41,7 @@ function submit_tag(e) {
 
   //http://stackoverflow.com/questions/680241/resetting-a-multi-stage-form-with-jquery
   $(':input',form).not(':button, :submit, :reset, :hidden').val('');
+  window.location.reload();
 
   return false;
 }
@@ -195,9 +197,14 @@ Rating is done on a 0 to 5 scale, with 5 being best.
 <td> <img style='width:105px; height: 70px;' src='/site_media/{{product.creator.user.username}}.jpg'> </td>
 <td> <img style='width:105px; height: 70px;'  src='/site_media/{{product.last_activity.user.username}}.jpg'> </td>
 </tr>
+
 <tr>
 <td> {{product.creator}} </td>
-<td> {{product.last_activity}} </td>
+<td> {{product.last_activity }} </td>
+</tr>
+<tr>
+<td> {{product.created_time|naturalday}} </td>
+<td> {{product.last_activity_time|naturalday }} </td>
 </tr>
 </table>
 
