--- a/trunk/semrate/templates/registration/login.html
+++ b/trunk/semrate/templates/registration/login.html
@@ -26,6 +26,17 @@
   <a href="{% url auth_password_reset %}" class='discrete_link'>[Forgot your password?]</a><br/><br/>
   <a href="{% url registration_register %}" class='discrete_link'>[Need an account]</a>?
 </p>
+<div style="float:clear; display:block"></div>
+<script src="/site_media/js/facebook.js" type="text/javascript"></script>
+    <script>
+    facebookAppId = '{{ FACEBOOK_APP_ID }}';
+    function facebookJSLoaded(){
+    FB.init({appId: facebookAppId, status: false, cookie: true, xfbml: true, oauth: true});
+    }
+    window.fbAsyncInit = facebookJSLoaded;
+    F = new facebookClass(facebookAppId);
+    F.load();
+</script>
 <div style='margin: 40px;'>
 	<div style="width:300px; background-color: #4b7f92; border: #4b7f92; ">
 	<form action="{% url facebook_connect %}?facebook_login=1" method="post">
