--- a/semrate/templates/viewproduct.html
+++ b/semrate/templates/viewproduct.html
@@ -184,7 +184,7 @@ Rating is done on a 0 to 5 scale, with 5 being best.
 </div>
 
 <br/><br/>
-<a class='discrete_link' style='font-size: 8pt;' href="/rdf/{{product.slug}}">[RDF]</a>
+<a class='discrete_link' style='font-size: 8pt;' href="/rdf{{product.slug}}">[RDF]</a>
 
 
 <table id='last_activity_table' style='margin: auto;'>
