--- a/semrate/templates/registration/password_change_form.html
+++ b/semrate/templates/registration/password_change_form.html
@@ -1,10 +1,12 @@
-{% extends "registration/registration_base.html" %}
+{% extends "base.html" %}
+{% block content %}
+
 {% block title %}Change password{% endblock %}
-{% block body %}
 <form method='post' action=''>{% csrf_token %}
 <table>
     {{ form }}
     <tr><td></td><td><input type='submit' value="Change password" /></td></tr>
 </table>
 </form>
+
 {% endblock %}
